# sspverif

./: .gitignore  2021-04-23-datastructure.drawio  Cargo.toml  Readme.md  notes
.github/workflows/: know-good-proofs.yml  rust.yml
crates/domino/: Cargo.toml  build.rs
crates/smtlib/: Cargo.toml
crates/ssbee/: Cargo.toml  Readme.md  build.rs
crates/ssbee/src/: cli.rs  main.rs
documentation/: cli.md  conf.py  index.md  index.rst  pseudocode.md
example-projects/: known-good.txt
example-projects/ae/: ae.drawio
example-projects/ae-mini/: ae.drawio
example-projects/kem-dem-cca-security/: README.md
example-projects/nprf/: ssp.toml
example-projects/protecs-workshop/: README.md
example-projects/sample_for_test/: invariant.smt  ssp.toml
example-projects/tls13-key-schedule/: README.md  tls13-ks-game-gen.py
example-projects/tls13-key-schedule-parameterless/: ssp.lark  tls13-ks-game-gen.py
example-projects/yao/: assumptions.toml  game_hops.toml  invariant-GBLG.smt2  invariant-Indcpa0.smt2  ssp.toml
examples/: broken  broken.txt
examples/mapping/: CompositionMappingGame.comp.ssp  Key-top.pkg.ssp  Key_bottom.pkg.ssp  Key_top_map.pkg.ssp  Map.pkg.ssp  Prf.pkg.ssp  invariant-EVAL.smt2  invariant-GET.smt2  invariant-SET.smt2  no-mapping-mapping-invariant
examples/prf/: example.comp.ssp
examples/prf-new/: Key_bottom.pkg.ssp  Left.comp.ssp  Left.ssp  Prf_left.pkg.ssp  Prf_right.pkg.ssp  Right.comp.ssp  Right.ssp  Wrapper.pkg.ssp  invariant-christoph.smt2  invariant.smt2  state-based-lemmas-proof-jan.smt2  state-based-lemmas-proof.smt2  state-identity-EVAL-left-top-key.smt2  state-identity-EVAL-right-bottom-key-right-value.smt2  state-identity-EVAL-right-bottom-key.smt2  state-identity-EVAL-right-top-key.smt2
examples/randomness/: CompositionRight.comp.ssp  Key.pkg.ssp  invariant  invariant-GET.smt2  invariant-SET.smt2  model.smt2
examples/yao/: Enc0.pkg.ssp  Enc1.pkg.ssp  Ev.pkg.ssp  Gate.pkg.ssp  Key.pkg.ssp  Keys.pkg.ssp  Left.comp.ssp  Right.comp.ssp  Simgate.pkg.ssp  composition.smt2  concatenation.smt2  invariant-GBLG.smt2  model-counterexample.smt2
paper/: .gitignore  app-ssp.tex  introduction.tex  local.bib  macros.tex  main.tex  ssbee.tex  ssp.tex  tutorial.tex
scripts/: test-known-examples.sh
smt-files/: better-sampling-maybe.smt  maybe-play.smt  play-tuples.smt
smt_tests/: wire-matching.smt
src/: errors.rs  expressions.rs  hacks.rs  identifier.rs  lib.rs  main.rs  package.rs  packageinstance.rs  proof.rs  scope.rs  smtgen.rs  split.rs  statement.rs  types.rs
src/cli/: filesystem.rs  mod.rs  project.rs
src/examples/: keypkg.rs  mapping.rs  mod.rs  modprf.rs  monoprf.rs  no-mapping-mapping-invariant  nomapping.rs
src/format/: context.rs  mod.rs
src/gamehops/: conjecture.rs  mod.rs  reduction.rs
src/parser/: ast.rs  common.rs  composition.rs  error.rs  example-key.pkg.ssp  example-prf.pkg.ssp  example-table.comp.ssp  example-tablekey.pkg.ssp  example-tableprf.pkg.ssp  example.comp.ssp  mod.rs  package.rs  pkg.pest  proof.rs  reduction.rs  ssp.pest  tests.rs  wire_checks.rs
src/project/: assumption.rs  equivalence.rs  error.rs  load.rs  mod.rs  (+3 more)
(+480 files in other folders)
