[workspace]
members = [".", "crates/smtlib"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sspverif-smtlib = { path = "crates/smtlib" }

[package]
name = "sspverif"
version = "0.1.0"
authors = [
    "Jan Winkelmann (keks) <git@keks.cool>",
    "Christoph Egger <christoph.egger@alumni.fau.de>",
]
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"
pest = "2.1"
pest_derive = "2.1"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.137"
serde_derive = "1.0.137"
subprocess = "0.2"
itertools = "0.10"
expectrl = "0.5.2"
miette = { version = "7.2.0", features = ["fancy"] }
tempfile = "3"

sspverif-smtlib = { workspace = true }

[lib]
name = "sspverif"
path = "src/lib.rs"
