[workspace]
members = [".", "crates/smtlib", "crates/ssbee"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sspverif-smtlib = { path = "crates/smtlib" }
sspverif = { path = "" }

[package]
name = "sspverif"
version = "0.1.0"
authors = [
    "Jan Winkelmann (keks) <git@keks.cool>",
    "Christoph Egger <christoph.egger@alumni.fau.de>",
    "Chris Brzuska <chris.brzuska@aalto.fi>",
]
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
expectrl = "0.5.2"
indicatif = "0.18"
indicatif-log-bridge = "0.2"
itertools = "0.10"
log = "0.4.22 "
miette = { version = "7.2.0", features = ["fancy"] }
pest = { version = "2.7", features = ["miette-error"] }
pest_derive = "2.7"
rayon = "1.10"
serde = "1.0.137"
serde_derive = "1.0.137"
sspverif-smtlib = { workspace = true }
subprocess = "0.2"
tempfile = "3"
thiserror = "1.0.61"
walkdir = "2"

[dev-dependencies]
mockall = "0.13"
