[package]
name = "ssbee"
version.workspace = true
edition.workspace = true

[dependencies]
sspverif = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
miette = { version = "7.2.0", features = ["fancy"] }

[build-dependencies]
sspverif = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "*"
env_logger = "0.11"
